--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@material-ui/pickers": "^3.2.10",
     "@stripe/stripe-js": "^1.12.1",
     "antd": "^4.11.2",
+    "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.5.0",
