--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.1",
     "react-click-outside-hook": "^1.1.1",
     "react-dom": "17.0.1",
+    "react-phone-number-input": "^3.1.19",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
