--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.2",
-    "stripe": "^8.135.0"
+    "stripe": "^8.135.0",
+    "swr": "^0.5.5"
   }
 }
