init raw value added to updateSelectedDate

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.2",
     "stripe": "^8.135.0",
-    "swr": "^0.5.5"
+    "swr": "^0.5.5",
+    "text-to-image": "^3.0.0"
   }
 }
