--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "next": "10.0.4",
+    "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
     "react": "17.0.1",
     "react-click-outside-hook": "^1.1.1",
