--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.6.0",
     "react": "17.0.1",
     "react-click-outside-hook": "^1.1.1",
+    "react-datepicker": "^3.8.0",
     "react-dom": "17.0.1",
     "react-phone-number-input": "^3.1.19",
     "react-redux": "^7.2.2",
