--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
+    "date-fns-timezone": "^0.1.4",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.1",
