--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.12.3",
     "next": "10.0.4",
+    "nextjs-cors": "^1.0.5",
     "nodemailer": "^6.6.0",
     "pg": "^8.6.0",
     "react": "17.0.1",
